# c-tutorials

./: .gitignore  .hello.c.un~
lecture-exercises/: smash.c
lecture-exercises/smash/: Makefile  smash.c
lecture-exercises/swap/: Makefile  swap.c
tools-examples/c-tools-lecture1/: Makefile  README
tools-examples/c-tools-lecture1/01.intlist/: Makefile  README  defns.h  intlist.h
tools-examples/c-tools-lecture1/02.c-mfbuild/: Makefile  README  list_library.c  list_library.h  mfbuild.c
tools-examples/c-tools-lecture1/03.perl-mfbuild/: Makefile  README  mfbuild.man  mfbuild.perl  mfbuilddefs
tools-examples/c-tools-lecture1/04.intlist-with-lib/: Makefile  README
tools-examples/c-tools-lecture1/05.libintlist/: Makefile  README  testlist.c
tools-examples/c-tools-lecture1/06.avgwordlen-only/: Makefile  README
tools-examples/c-tools-lecture1/07.intlist-with-cmake/: CMakeLists.txt  README
tools-examples/c-tools-lecture1/lecture/: Makefile  lecture-handout.tex  lecture.tex
tools-examples/c-tools-lecture2/: Makefile  README
tools-examples/c-tools-lecture2/01.string-debug/: Makefile  README  eg-fixed.c  eg.c
tools-examples/c-tools-lecture2/02.badhash/: Makefile  README  hash.c  hash.h  iterate.c  patch.fixleak  testhash.c  (+1 more)
tools-examples/c-tools-lecture2/06.cmake-testing/: CMakeLists.txt  README  avgwordlen.c
tools-examples/c-tools-lecture2/06.cmake-testing/lib/: CMakeLists.txt  testlist.c
tut1/: .Makefile.un~  Makefile  main  main.c  main.out
tut2/: Makefile  pointer_arithmetic.c  pointer_arithmetic.h  pointers  pointers.c
tut3/: Makefile  bits.c
(+26 files in other folders)
